CSSParser::parseImageSet() doesn't need a parameter. https://bugs.webkit.org/show_bug.cgi?id=117617

Patch by Jaehun Lim <ljaehun.lim@samsung.com> on 2013-06-14
Reviewed by Darin Adler.

parseImageSet() can get m_valueList directly.
And minor fixes.

No new tests, no behavior change.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseValue):
(WebCore::CSSParser::parseContent):
(WebCore::CSSParser::parseFillImage):
(WebCore::CSSParser::parseBorderImage):
(WebCore::CSSParser::parseImageSet):
* css/CSSParser.h:

Canonical link: https://commits.webkit.org/135800@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151597 268f45cc-cd09-0410-ab3c-d52691b4dbfc